--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <ul class="toDoList" id="unorderedList">
 
 
-                    <li><input type="checkbox" class="checkbox">
-                        <label for="a">Practice yoga </label>
+                    <li id="listItem"><input type="checkbox" class="checkbox">
+                        <label for="a" class="result">Practice yoga </label>
                         <button class="delete-2">Delete</button>
                     </li>
                     <li><input type="checkbox" class="checkbox">
-                        <label>Water Plants</label>
+                        <label class="result">Water Plants</label>
                         <button class="delete-3">Delete</button>
                     </li>
 
                     <li><input type="checkbox" class="checkbox">
-                        <label for="c">Go to ReDi </label>
+                        <label for="c" class="result">Go to ReDi </label>
                         <button class="delete-4">Delete</button>
                     </li>
 
